--- a/themes/delcanto/sass/variables.sass
+++ b/themes/delcanto/sass/variables.sass
@@ -32,7 +32,17 @@ $Helvetica: Helvetica, Arial, sans-serif
 		-webkit-font-smoothing: subpixel-antialiased
 		-moz-osx-font-smoothing: auto
 
-
 @mixin Helvetica()
 	font-family: $Helvetica
 	letter-spacing: .03em
+
+@mixin fnt_helv()
+	font-family: $Helvetica
+	letter-spacing: .03em
+
+@mixin fnt_newj()
+	font-family: $NewJune
+
+@mixin fnt_newjb()
+	font-family: $NewJuneBold
+	font-weight: bold
