--- a/themes/delcanto/sass/modules.sass
+++ b/themes/delcanto/sass/modules.sass
@@ -127,19 +127,21 @@ a.close
 
 nav.pagination
 	text-align: center
-	font-family: $Helvetica
+	font-weight: bold
 .page-numbers
-	border: .1rem solid
 	vertical-align: middle
 	display: inline-block
 	width: 2em
 	height: 2em
-	padding-top: .35em
-	margin: 0 0.2em
-	background: $white
+	padding-top: .6em
+	margin: 0 .2em
 	&.prev, &.next
-		border-radius: 50%
-		padding-top: .2em
+		background: url(../img/arrow.png) no-repeat center
+		background-size: 50%
+		color: transparent
+		margin: 0 2em
+	&.prev
+		transform: rotate(180deg)
 	&.dots
 		border: none
 		background: none
@@ -147,6 +149,7 @@ nav.pagination
 		background: $orange
 		border-color: $orange
 		color: $white
+		+border-radius(50%)
 
 span
 	&.box
