Try 1: 2 Different forms.

--- a/themes/delcanto/sass/modules.sass
+++ b/themes/delcanto/sass/modules.sass
@@ -441,7 +441,7 @@ span
 			&:hover
 				background: $lightgray
 				color: $whitegray
-		&.today
+		&.today, &.active
 			border: 1px solid $orange
 			& + button
 				border-left: none
