--- a/themes/delcanto/sass/local.sass
+++ b/themes/delcanto/sass/local.sass
@@ -186,53 +186,6 @@ h2.area_title
 
 
 
-	// .stories li, .story
-	// 	display: block
-	// 	height: 7em
-	// 	.news_img
-	// 		display: inline-block
-	// 		vertical-align: middle
-	// 		margin-right: 1em
-	// 		height: inherit
-	// 		img
-	// 			height: 72%
-	// 			width: auto
-	// 			margin-top: 10%
-	// 			margin-left: 1em
-	// 		@media screen and (max-width: 40em)
-	// 			width: 0
-	// 			overflow: hidden
-	// a
-	// 	color: $white
-	// 	display: inline-block
-	// 	width: 100%
-	// 	height: inherit
-	// 	&.toggle_button
-	// 		position: absolute
-	// 		top: 1.75em
-	// 		right: 1.25em
-	// 		width: 3em
-	// 		height: 3em
-	// 		z-index: 1
-	// 		cursor: pointer
-	// .title
-	// 	width: 70%
-	// 	display: inline-block
-	// 	vertical-align: middle
-	// 	+font-smoothing()
-	// 	> div
-	// 		font-size: 1.4em
-	// &.open
-	// 	.latest.story:after
-	// 		transform: rotate(180deg)
-	// 	ul.stories
-	// 		li:hover
-	// 			background: $white
-	// 			a
-	// 				color: $orange
-
-
-
 
 
 
@@ -466,14 +419,14 @@ h2.area_title
 	h2.area_title
 		padding: 0 0 .4em
 
-	.agenda_controls
+	.search_controls
 		position: relative
 		margin: 2em 0
 		&.loading
 			.loader
 				width: 15% !important
 				padding: 1em !important
-			form
+			.flexbuttons
 				width: 85%
 	.input.wrap
 		position: relative
@@ -498,19 +451,10 @@ h2.area_title
 		+transition(width .2s ease, padding .2s ease)
 		img
 			height: 100%
-	form
+	.flexbuttons
 		width: 100%
 		+transition(width .2s ease)
 
-
-#searchfilter
-	input, select
-		width: 100%
-		height: 100%
-		border-top: none
-		border-left: none
-	input#visibleFecha
-		border-left: 1px solid
 
 
 .big.input
@@ -527,30 +471,43 @@ h2.area_title
 		font-size: .5em
 		font-weight: bold
 		text-transform: uppercase
-	input, select
-		padding-top: 2em
-		font-weight: bold
-		color: $gray
-		+ellipsis()
-	&:after
+	&.select:after
 		content: ''
-		background: url('../img/arrow.png') no-repeat
+		background: url('../img/arrow.png') no-repeat center
 		background-size: 50%
 		opacity: .6
 		position: absolute
-		top: 1em
-		right: 1em
+		top: .8em
+		right: .8em
 		width: 1em
 		height: 1em
 		transform: rotate(90deg)
+		transition: transform .5s ease
+	&.select:hover::after
+		transform: rotate(270deg)
 	&.active
 		input, select
 			color: $orange
 			border-color: $gray !important
-
-
-
-
+	button[type="submit"]
+		position: absolute
+		top: .5em
+		right: 1em
+		width: 1.3em
+		+border-radius(.4rem)
+		padding: .3em
+		opacity: .5
+		background: none
+		border-color: rgba(0, 0, 0, 0)
+		+transition(top .2s, width .2s, border .2s)
+		img
+			width: 100%
+			height: auto
+			display: block
+	&.submit_button:hover button[type="submit"]
+		top: 1.1em
+		width: 1.5em
+		border-color: rgba(0, 0, 0, 1)
 
 .ag_results
 	h3
@@ -703,6 +660,9 @@ form#local_searchform
 		.subtitle
 			+fnt_helv()
 			color: $gray
+			a
+				font-weight: bold
+				border-bottom: 1px solid
 		.action
 			width: 30%
 			display: inline-block
