--- a/themes/delcanto/sass/modules.sass
+++ b/themes/delcanto/sass/modules.sass
@@ -422,16 +422,10 @@ span
 	position: relative
 	display: flex
 	align-content: stretch
-	button
+	> div
 		flex-grow: 1
 		border-right: none
 		text-align: left
-		&:hover
-			border: 1px solid $orange
-			background: $orange
-			color: $white
-			& + button
-				border-left: none
 		&:last-child
 			border-right: 1px solid
 		&.past
@@ -441,9 +435,81 @@ span
 			&:hover
 				background: $lightgray
 				color: $whitegray
-		&.today, &.active
+		&.active
 			border: 1px solid $orange
-			& + button
+		&.today
+			border-right: 1px solid
+			&:first-child
+				border-right: none
+			&::before
+				content: 'HOY'
+				display: inline-block
+				background: $black
+				color: $white
+				padding: 0.5em .5em .3em
+				font-size: xx-small
+				font-weight: bold
+				+border-radius(.4rem)
+				+font-smoothing()
+				margin-right: .5em
+			&:hover
+				border-color: $orange
+			& + div.active
+				border-left: 1px solid $orange
+			&.active
+				border-right: 1px solid $orange
+		&.today, &.active
+			& + div
 				border-left: none
 	.input.wrap
 		flex: 1
+	& + .flexbuttons > div
+		border-top: none
+
+.dates_control.months
+	label
+		text-transform: capitalize
+		font-weight: bold
+		> span
+			font-weight: initial
+	> div.today::before
+		content: ''
+		width: .5em
+		height: .5em
+		display: inline-block
+		padding: 0
+		position: relative
+		bottom: .3rem
+
+.input.wrap
+	background: $white
+	border: 1px solid
+	border-right: none
+	padding: 1em
+	position: relative
+	&.select:hover, &.radio:hover
+		border-right: 1px solid
+		background: $orange
+		& input, & select, & label
+			color: $white
+		& + div
+			border-left: none
+	input, select
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		padding: 1em 1em 0
+		font-weight: bold
+		background: transparent
+		color: $gray
+		border: none
+		+ellipsis()
+		cursor: pointer
+	input[type="radio"]
+		opacity: 0
+	select::-ms-expand
+		display: none
+	select option
+		color: $black
