--- a/themes/delcanto/sass/local.sass
+++ b/themes/delcanto/sass/local.sass
@@ -339,10 +339,10 @@ h2.area_title
 		font-size: 2em
 	.label
 		color: $orange
-		margin-bottom: .5em
+		margin-bottom: 1.5em
 	.subtitle
 		font-family: $Helvetica
-		margin: 0.4em 0 2em
+		margin: 1em 0 2em
 	.status_label
 		margin-top: 2em
 		&.stick
@@ -360,10 +360,16 @@ h2.area_title
 		font-family: $Helvetica
 		line-height: 1.4em
 		margin-bottom: 1em
+		font-weight: bold
 	a.button
 		border: .1rem solid $white
 		padding-top: .65em
 
+.status_label.mobile-ui
+	background: $white
+	width: 100%
+	border: .1rem solid $black
+	padding: 1em 2em
 
 .main_content_column img
 	max-width: 100%
