Calendar button icon

--- a/themes/delcanto/sass/modules.sass
+++ b/themes/delcanto/sass/modules.sass
@@ -562,8 +562,20 @@ span
 
 .atcb-link
 	display: block
+	margin: 0 .5em
+	padding: .2em 2em .2em .5em
 	outline: none !important
 	cursor: pointer
+	&::after
+		content: ''
+		width: 1em
+		height: 1.25em
+		display: inline-block
+		background: url(../img/icon_calendar.png) no-repeat center
+		background-size: contain
+		margin-left: .5em
+		position: absolute
+		bottom: .4em
 
 .atcb-link:focus ~ ul,
 .atcb-link:active ~ ul,
@@ -602,8 +614,6 @@ span
 
 .atc-style-orange
 	.atcb-link
-		margin: 0 .5em
-		padding: .2em .5em
 		vertical-align: middle
 		border-radius: .4rem
 		border: .1rem solid $gray
