Update singles for convocatorias and noticias

--- a/themes/delcanto/sass/local.sass
+++ b/themes/delcanto/sass/local.sass
@@ -770,6 +770,9 @@ form#local_searchform
 	img
 		max-width: 100%
 		height: auto
+	.status_label
+		margin-top: 4em
+		font-size: .7em
 
 
 .single-convocatorias
@@ -790,6 +793,17 @@ form#local_searchform
 	.body_content
 		max-width: 50em
 		margin: 0 auto
+
+.single-post
+	.main_content_column
+		width: 60%
+		margin-left: auto
+		margin-right: auto
+		float: inherit
+	.post_info .label
+		color: $gray
+	p.published
+		margin-bottom: 4em
 
 
 // 404
