arrows, debug de agenda

--- a/themes/delcanto/sass/local.sass
+++ b/themes/delcanto/sass/local.sass
@@ -246,16 +246,18 @@ h2.area_title
 	position: absolute
 	top: 50%
 	display: block
-	width: 20px
-	height: 20px
+	width: 3.2rem
+	height: 3.2rem
 	margin-top: -10px
 	padding: 0
 	cursor: pointer
 	color: transparent
 	border: none
 	outline: none
+	border: .2rem solid $black
 	background: url(../img/arrow.png) center no-repeat
-	background-size: 60%
+	background-size: 40%
+
 	&:before
 		font-size: 20px
 		line-height: 1
